Spacing Fix 3

--- a/chest.css
+++ b/chest.css
@@ -40,7 +40,7 @@
   color: #1c1717;
   margin-left: auto;
   margin-right: auto;
-  top: 20px;
+  top: 50%;
 }
 .chest__panel {
   position: absolute;
